--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,40 @@
-version: '3.9'
+
 
 services:
   backend:
-    build: 
+    build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: briefly_backend
     ports:
       - "8000:8000"
-    env_file:
-      - ./backend/.env
-    restart: unless-stopped
+    volumes:
+      - ./backend:/app
+      - sqlite-data:/app/data  # Том для хранения SQLite базы данных
+    environment:
+      - DATABASE_URL=sqlite:///data/briefly.db  # Путь к SQLite базе
+      - CORS_ORIGINS=http://localhost:3000,http://frontend:3000
+    depends_on:
+      - frontend
+    networks:
+      - briefly-network
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    container_name: briefly_frontend
-    depends_on:
-      - backend
     ports:
       - "3000:3000"
-    env_file:
-      - ./frontend/.env
-    restart: unless-stopped
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - REACT_APP_API_URL=http://localhost:8000
+    networks:
+      - briefly-network
+
+volumes:
+  sqlite-data:  # Именованный том для персистентности данных SQLite
+
+networks:
+  briefly-network:
+    driver: bridge
